Fixed missing datetimepicker due to opacity and visibility

--- a/public/assets/src/opennemas-webarch/less/components/_datetimepicker.less
+++ b/public/assets/src/opennemas-webarch/less/components/_datetimepicker.less
@@ -1,5 +1,10 @@
+.bootstrap-datetimepicker-widget.dropdown-menu {
+  opacity: 1;
+  visibility: visible;
+}
+
 .bootstrap-datetimepicker-widget td span {
-  margin: 0
+  margin: 0;
 }
 
 .bootstrap-datetimepicker-widget td span:hover {
